[package]
name = "strm-privacy-driver"
version = "0.1.0"
authors = ["Maciek Mika maciek@strmprivacy.io"]
description = "Rust API driver for STRMPrivacy"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.2"
pretty_env_logger = "0.4"
log = "0.4.17"
serde = { version = "1.0.136", features = ["derive"] }
avro-rs = {version = "0.13.0"}
