[package]
name = "strm-privacy-driver"
version = "0.2.0"
authors = ["Maciek Mika maciek@strmprivacy.io"]
description = "Rust API driver for STRMPrivacy"
repository = "https://github.com/strmprivacy/rust-driver"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
avro-rs = { version = "0.13.0" }

[dev-dependencies]
dotenv = "0.15.0"
tokio-test = "0.4.2"